power: Make SonarQube mandatory, add Phase 8 audit+push, update hooks and scripts