@@ -1,6 +1,6 @@
 # App Modernization Power — Java & .NET
 
-Single-prompt autonomous modernization. One message runs seven phases: assess, upgrade build, strip legacy code, apply modern language features, externalize config, test, and validate quality.
+Single-prompt autonomous modernization. One message runs eight phases: assess, upgrade build, strip legacy code, apply modern language features, externalize config, test, SonarQube quality gate, and audit+push.
 
 Java 7/8/11/17/21 → **21 or 25 (LTS)** · .NET Framework → **.NET 8+**
 
@@ -10,30 +10,106 @@ migrate, java, dotnet, .net, java-25, java-21, java-17, net8, modernize, spring-
 ## Usage
 
 ```
-migrate java from 7 to java 25
-migrate java to 21
+migrate java from 7 to java 21
+migrate java to 25
 migrate .net
+modernize java
+upgrade dotnet
 ```
 
-The run proceeds through all seven phases without further prompting, one line per phase transition.
+The run proceeds through all eight phases without further prompting, one line per phase transition.
 
-> **Requires installation.** Power steering loads on demand, so the power alone cannot recognize a trigger phrase. Copy the orchestrator, rules, and version matrix into `.kiro/steering/` with `inclusion: auto`, and the hooks into `.kiro/hooks/`. See `installation.md`.
+---
 
-## Pick the target pair, not just a version
+## Power Structure — What Gets Installed
 
-A Java version with an incompatible framework produces a broken build. This is the single most common way a version-upgrade migration fails.
+When this power is installed, the following files are placed into the user's workspace:
 
-| Target | Requires | Status |
-|---|---|---|
-| Java 21 | Spring Boot 3.2+ | works, but all 3.x is **EOL** |
-| **Java 25** | **Spring Boot 4.0+** | current supported pair |
-| Java 25 + Spring Boot 3.4 | — | **unsupported — never pair** |
+### Root Files (REQUIRED)
 
-Every Spring Boot 3.x branch left OSS support in mid-2026. A project on 3.x gets no security fixes.
+| File | Purpose |
+|------|---------|
+| `POWER.md` | This manifest — power identity, keywords, description |
+| `README.md` | User-facing documentation |
+| `mcp.json` | SonarQube MCP server configuration |
 
-**If a project is on Spring Boot 3.x and the goal is Java 25, that is two migrations** — Java version *and* Boot 3.x → 4.x, which carries its own breaking changes. The power scopes these separately rather than silently bundling them. Full detail in `java-version-matrix.md`.
+### Hooks (ALL REQUIRED — installed to `.kiro/hooks/`)
 
-## The Seven Phases
+These hooks enforce quality gates and safety during migration:
+
+| Hook File | Event | Action | Track |
+|-----------|-------|--------|-------|
+| `hooks/git-safety-guard.json` | preToolUse:shell | Blocks destructive git ops in Phases 1-6 | Both |
+| `hooks/migration-write-guard.json` | preToolUse:write | Namespace ban + scope enforcement | Both |
+| `hooks/phase-gate-validation.json` | postTaskExecution | Runs build gate, updates state | Both |
+| `hooks/audit-log-entry.json` | postTaskExecution | Appends audit log entry | Both |
+| `hooks/sonarqube-credential-prompt.json` | preTaskExecution | Prompts for SonarQube URL+token at Phase 7 | Both |
+| `hooks/sonarqube-post-task.json` | postTaskExecution | Quick quality check after each task | Both |
+| `hooks/final-audit-report.json` | postTaskExecution | Generates audit report + pushes to GitHub | Both |
+| `hooks/build-on-java-save.json` | fileEdited:*.java | Auto Maven compile on save | Java |
+| `hooks/build-on-dotnet-save.json` | fileEdited:*.cs | Auto dotnet build on save | .NET |
+
+### Skills (installed to `.kiro/skills/`)
+
+| Skill | Trigger Phrase | Track |
+|-------|---------------|-------|
+| `skills/java-migration.md` | "migrate java to 21" | Java |
+| `skills/dotnet-migration.md` | "migrate .net" | .NET |
+| `skills/sonarqube-check.md` | "run sonarqube check" | Both |
+
+### Steering Files (installed to `.kiro/steering/` with `inclusion: auto`)
+
+#### Core (REQUIRED for both tracks)
+
+| File | Purpose | Inclusion |
+|------|---------|-----------|
+| `steering/orchestrator.md` | Master 8-phase execution contract | auto |
+| `steering/modernization-workflow.md` | Trigger phrases, quality gates, output docs | auto |
+| `steering/audit-log.md` | Event type catalog, append-only format | auto |
+| `steering/autopilot.md` | Autonomy rules, decision framework | auto |
+| `steering/toolchain-bootstrap.md` | Preflight check, no-admin install | auto |
+| `steering/sonarqube-validation.md` | Phase 7 mandatory scan workflow | auto |
+
+#### Java Track
+
+| File | Purpose | Inclusion |
+|------|---------|-----------|
+| `steering/java-migration-rules.md` | javax→jakarta, removed APIs, Java 21 features | auto |
+| `steering/java-version-matrix.md` | LTS versions, Spring Boot pairing | auto |
+
+#### .NET Track
+
+| File | Purpose | Inclusion |
+|------|---------|-----------|
+| `steering/dotnet-migration-rules.md` | Framework→8 mapping, async patterns, hosting | auto |
+
+#### Templates (referenced by orchestrator via `#[[file:...]]`)
+
+| File | Used At | Purpose |
+|------|---------|---------|
+| `steering/migration-plan-template.md` | Phase 2 | Migration plan format reference |
+| `steering/sonarqube-fix-summary-template.md` | Phase 1 | SonarQube fix summary format |
+| `steering/validation-report-template.md` | Phase 6 | Validation report format |
+| `steering/audit-log-template.md` | All phases | Audit log entry format reference |
+
+#### Documentation (on-demand, not auto-loaded)
+
+| File | Purpose |
+|------|---------|
+| `steering/getting-started.md` | User walkthrough |
+| `steering/installation.md` | Manual install guide |
+| `steering/hooks-reference.md` | Hook documentation |
+
+### Scripts
+
+| File | Purpose |
+|------|---------|
+| `scripts/phase7-quality-gate.ps1` | SonarQube gate check (fallback when MCP unavailable) |
+| `scripts/phase7-sonar-scan.ps1` | SonarQube scanner execution |
+
+---
+
+## The Eight Phases
 
 | # | Phase | Gate |
 |---|---|---|
@@ -43,126 +119,52 @@ Every Spring Boot 3.x branch left OSS support in mid-2026. A project on 3.x gets
 | 4 | Modern language features | Compiles, 0 errors |
 | 5 | Configuration externalization | Config loads |
 | 6 | Testing | 0 new failures |
-| 7 | SonarQube quality gate (MANDATORY — prompts for URL + token) | pass / fail (no indeterminate/pending) |
+| 7 | SonarQube quality gate (MANDATORY — prompts for URL + token) | pass / fail |
 | 8 | Audit report generation + GitHub push | Report exists, code pushed |
 
-A phase advances only when its gate passes. Three consecutive gate failures stop the run with a specific error rather than continuing on a broken build.
+A phase advances only when its gate passes. Three consecutive gate failures stop the run.
 
-**SonarQube is mandatory.** Phase 7 will prompt the user for their SonarQube server URL and token, run the scanner against the migrated code, and get a definitive pass/fail. It does not accept stale results or skip the scan.
+---
 
-**Audit and push are mandatory.** Phase 8 generates a comprehensive audit report covering all phases (including SonarQube results) and pushes the final code to GitHub.
+## SonarQube is MANDATORY
 
-## Resumability
+Phase 7 prompts the user for their SonarQube server URL and token, runs the scanner, and gets a definitive pass/fail. It does not accept stale results, skip the scan, or mark as pending.
 
-Position lives in `Migration/.migration-state.json`, not conversation memory. A seven-phase migration outlives its context window; after a compaction the agent re-reads the file to confirm position instead of restarting or skipping ahead.
+## Audit and Push are MANDATORY
 
-- Resume: `continue the migration`
-- Restart clean: delete the state file
+Phase 8 generates `Migration/FINAL-AUDIT-REPORT.md` covering all phases (including SonarQube results) and pushes the final code to GitHub.
 
-## What It Changes
+---
 
-### Java
-Build config to the chosen LTS · `javax.*` → `jakarta.*` · removes raw servlets, legacy DAOs, static connection helpers · extracts a service layer where one is genuinely absent · records, sealed interfaces, pattern matching, switch expressions, text blocks, virtual threads, sequenced collections · `application.yml` with profiles and env-var secrets
+## MCP Configuration
 
-Java 25 adds scoped values, module import declarations, flexible constructor bodies, compact source files.
-
-**Preview features are never applied.** Structured concurrency, stable values, and primitive patterns are still preview in 25 despite frequent reports otherwise. Compiling production code with `--enable-preview` pins you to one JDK.
-
-### .NET
-SDK-style `.csproj` targeting `net8.0` · `System.Web` → ASP.NET Core · EF6 → EF Core · full async/await conversion · `Startup.cs` → minimal hosting `Program.cs` · records, primary constructors, collection expressions, raw string literals, nullable reference types · `appsettings.json` with Options pattern · `IHttpClientFactory`
-
-## Components
-
-### Steering
-| File | Loaded | Purpose |
-|---|---|---|
-| `orchestrator.md` | **auto** | Phase 1→7 contract, state protocol, gates |
-| `java-version-matrix.md` | **auto** | Version/framework pairing, feature availability |
-| `java-migration-rules.md` | **auto** | `javax`→`jakarta`, removed APIs, target patterns |
-| `dotnet-migration-rules.md` | **auto** | .NET Framework→8 mappings |
-| `toolchain-bootstrap.md` | on demand | Preflight + no-admin Maven / .NET SDK install |
-| `installation.md` | on demand | Wiring guide |
-| `getting-started.md` | on demand | Phase walkthrough |
-| `sonarqube-validation.md` | on demand | Quality gate workflow |
-| `hooks-reference.md` | on demand | Hook catalog |
-| `autopilot.md` | on demand | Autonomy rules |
-
-### Hooks
-| Hook | Trigger | Action |
-|---|---|---|
-| `migration-write-guard` | preToolUse:write | Scope + namespace check, one pass |
-| `phase-gate-validation` | postTaskExecution | Runs gate, updates state |
-| `build-on-java-save` | fileEdited | `mvn compile` |
-| `build-on-dotnet-save` | fileEdited | `dotnet build` |
-| `sonarqube-post-task` | postTaskExecution | Quality spot-check |
-| `git-safety-guard` | preToolUse:shell | Blocks branch/commit/push |
-
-Exactly one `preToolUse:write` hook ships here deliberately — each costs an agent round-trip per file write, so three overlapping guards on a 200-file migration would add 600 round-trips.
-
-### Scripts
-| Script | Purpose |
-|---|---|
-| `phase7-quality-gate.ps1` | SonarQube gate check when native MCP tools are unavailable. Prompts for the token, masked. |
-
-### MCP
 | Server | Purpose | Required |
 |---|---|---|
 | `sonarqubemcp` | Quality gate scan, metrics, issues | **Yes — Phase 7 is mandatory** |
 
-Verified: `sonarqube-mcp-server` v1.22.0.3040, 19 tools. The MCP endpoint is a **different host** from the SonarQube server; pointing `url` at the SonarQube server returns zero tools.
+The MCP endpoint (`sonarqube-mcp-server.azurewebsites.net/mcp`) is a **different host** from the SonarQube server. The token is prompted at runtime and never committed.
 
-## Secrets
-
-The token is **prompted for at runtime** — never an environment variable, never committed.
-
-| Where | How |
-|---|---|
-| `.kiro/settings/mcp.json` | Real token; **gitignored** |
-| `.kiro/settings/mcp.json.example` | Committed template with placeholder |
-| Scripts | `Read-Host -AsSecureString`, scrubbed in `finally` |
-| Phase 7 runtime | Agent asks user directly for URL + token before scanning |
-
-Env vars leak into child processes, `ps` output, CI logs, and crash dumps.
-
-`autoApprove` covers read-only tools only. `change_sonar_issue_status` and `change_security_hotspot_status` write to shared server state and always require confirmation.
+---
 
 ## Dependencies
 
-None beyond Kiro's built-in tools. Transformations are file reads and writes; builds and tests run through the shell. This power does not call `aws-transform`, `java-migration-power`, or any other power.
-
 | Requirement | For |
 |---|---|
-| JDK matching target + Maven 3.9 / Gradle 8 | Java track |
+| JDK 21+ (25 OK, uses `--release 21`) + Maven 3.9 | Java track |
 | .NET 8 SDK | .NET track |
 | SonarQube MCP + token | **Phase 7 — MANDATORY** |
-| Git + GitHub remote | **Phase 8 — MANDATORY for push** |
+| Git + GitHub remote | **Phase 8 — MANDATORY** |
 
-`toolchain-bootstrap.md` covers no-admin installation when no package manager is present.
+---
 
 ## Scope Boundary
 
 **In:** language version upgrade, legacy code removal, service extraction, modern language features, configuration externalization, deprecated API replacement, test updates.
 
-**Out:** new features, UI redesign, database schema changes, unrelated refactoring, dependency upgrades not required by the migration.
+**Out:** new features, UI redesign, database schema changes, unrelated refactoring.
 
-Enforced at write time by `migration-write-guard`.
+---
 
-## Phase 7 is MANDATORY
+## Resumability
 
-The gate requires a **fresh** SonarQube scan. The agent must:
-1. Prompt the user for SonarQube URL and token
-2. Commit and push the migration code
-3. Run `mvn sonar:sonar` (Java) or `dotnet sonarscanner` (.NET) with the provided credentials
-4. Query the gate result via MCP tools
-5. Record pass or fail — indeterminate/pending are not valid final states
-
-If the scan reveals issues, the agent fixes them and re-scans (up to 3 attempts).
-
-## Phase 8 — Audit & GitHub Push
-
-After Phase 7, the agent:
-1. Generates `Migration/FINAL-AUDIT-REPORT.md` covering all phases with SonarQube results
-2. Commits the audit report
-3. Pushes all code to GitHub on the migration branch
-
-This ensures the repository contains both the modernized code and the complete audit trail.
+Position lives in `Migration/.migration-state.json`. After context compaction, the agent re-reads this file to confirm position. Say `continue the migration` to resume.
